# Argos

./: .gitignore  AGENT.md  CMakeLists.txt  HISTORY.md  MIGRACION_ESPIDF5.md  README.md  argos.sh  build.sh  plan.md  sdkconfig.defaults
components/argos_core/: CMakeLists.txt
components/argos_core/include/: argos_core.h
components/argos_core/src/: argos_core.c
components/argos_hal/: CMakeLists.txt
components/argos_hal/include/: argos_hal.h  hw_config.h
components/argos_hal/src/: argos_hal.c
components/argos_net/: CMakeLists.txt
components/argos_net/include/: argos_net.h  net_config.h
components/argos_net/src/: argos_net.c  webpage.h
components/argos_router/: CMakeLists.txt
components/argos_router/include/: argos_router.h  experiment_config.h
components/argos_router/src/: argos_router.c
components/argos_store/: CMakeLists.txt
components/argos_store/include/: argos_store.h  store_config.h
components/argos_store/src/: argos_store.c
main/: CMakeLists.txt  main.c
test/: CMakeLists.txt  test_hal.c  test_net.c  test_router.c  test_store.c
tests_host/: Makefile  test_completo.c  test_web.py
